# chess-corners-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  output.json
.claude/agents/: calibration-target-detector.md  deep-implementer.md  quick-implementer.md
.github/pages/: index.html
.github/workflows/: audit.yml  bench-gate.yml  ci.yml  cpp.yml  docs.yml  publish-crates.yml  release-npm-deprecate.yml  release-npm.yml  release-pypi.yml  semver-checks.yml
assets/ml/: chess_refiner_v1.onnx  chess_refiner_v1.onnx.data
book/: book.toml
book/src/: SUMMARY.md  part-01-orientation.md  part-02-using-the-detector.md  part-03-chess-detector.md  part-03-core-chess-internals.md  part-04-multiscale-and-pyramids.md  part-04-radon-detector.md  part-05-performance-and-integration.md  part-05-refiners.md  (+9 more)
config/: chess_algorithm_config_example.json  chess_cli_config.example.json  chess_cli_config_example.json  chess_cli_config_example_ml.json
crates/box-image-pyramid/: Cargo.toml  README.md
crates/box-image-pyramid/benches/: pyramid_perf.rs
crates/box-image-pyramid/src/: imageview.rs  lib.rs  pyramid.rs
crates/chess-corners/: Cargo.toml  README.md
crates/chess-corners-capi/: CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml  chess-corners.pc.in
crates/chess-corners-capi/cmake/: chess-corners-config.cmake.in
crates/chess-corners-capi/examples/cpp/: .gitignore  CMakeLists.txt  detect.cpp
crates/chess-corners-capi/include/: chess_corners.h  chess_corners.hpp
crates/chess-corners-capi/src/: convert.rs  lib.rs
crates/chess-corners-capi/tests/: parity.rs  smoke.c
crates/chess-corners-core/: Cargo.toml  README.md
crates/chess-corners-core/benches/: chess_response.rs  descriptor_fit.rs  nms_scaling.rs  radon_response.rs  refiners.rs
crates/chess-corners-core/benches/common/: mod.rs
crates/chess-corners-core/examples/: orientation_methods_bench.rs
crates/chess-corners-core/src/: descriptor.rs  detect.rs  imageview.rs  lib.rs  params.rs  radon.rs  radon_detector.rs  refine.rs  refine_radon.rs  response.rs  unstable.rs
crates/chess-corners-core/src/detect/: dense.rs  merge.rs  mod.rs  neighbors.rs
crates/chess-corners-core/src/detect/chess/: detect.rs  mod.rs  response.rs  ring.rs
crates/chess-corners-core/src/detect/radon/: detect.rs  legacy.rs  mod.rs  primitives.rs  response.rs
crates/chess-corners-core/src/orientation/: adaptive_beta.rs  api.rs  baseline.rs  descriptor.rs  disk_sector.rs  mod.rs  ring_fit.rs  sigma_correction.rs
crates/chess-corners-core/src/orientation/disk_sector/: candidates.rs  data.rs  geometry.rs  mod.rs  score.rs  search.rs
crates/chess-corners-core/src/orientation/ring_fit/: mod.rs  robust.rs  seed.rs  solver.rs  uncertainty.rs
crates/chess-corners-core/src/refine/: center_of_mass.rs  forstner.rs  legacy.rs  mod.rs  radon_peak.rs  saddle_point.rs
crates/chess-corners-core/tests/: detect.rs  orientation_adaptive_beta.rs  orientation_baseline_unchanged.rs  orientation_disk_fit.rs  orientation_ring_fit.rs  orientation_sigma_correction.rs  radon_parity.rs  radon_vs_chess.rs  refiner_accuracy.rs  responce_golden.rs
crates/chess-corners-ml/: Cargo.toml
crates/chess-corners-ml/assets/ml/: chess_refiner_v3.onnx  chess_refiner_v3.onnx.data  chess_refiner_v4.onnx  chess_refiner_v4.onnx.data
crates/chess-corners-ml/assets/ml/fixtures/v3/: meta.json  patches.npy  torch_out.npy
crates/chess-corners-ml/assets/ml/fixtures/v4/: meta.json  patches.npy  torch_out.npy
crates/chess-corners-ml/src/: lib.rs
crates/chess-corners-ml/tests/: onnx_parity.rs
crates/chess-corners-py/: Cargo.toml  README.md  pyproject.toml
crates/chess-corners-py/examples/: run_with_code_config.py  run_with_full_config.py
crates/chess-corners-py/python/chess_corners/: __init__.py  __init__.pyi
crates/chess-corners-py/python_tests/: test_basic.py  test_builder_api.py  test_config_orientation.py  test_config_roundtrip.py  test_full_config_example.py  test_stub_parity.py  test_upscale_config.py
crates/chess-corners-py/src/: config.rs  lib.rs
crates/chess-corners-py/src/config/: detector.rs  mod.rs  multiscale.rs  parse.rs  refiners.rs  strategy.rs  upscale.rs
crates/chess-corners-testutil/: Cargo.toml
crates/chess-corners-testutil/src/: boards.rs  lib.rs  noise.rs
crates/chess-corners-wasm/: Cargo.toml  README.md
crates/chess-corners-wasm/demo/: README.md  app.js  index.html
crates/chess-corners-wasm/src/: config.rs  lib.rs
crates/chess-corners-wasm/src/config/: detector.rs  mod.rs  multiscale.rs  refiners.rs  strategy.rs  upscale.rs
crates/chess-corners/benches/: chess_pipeline.rs  radon_pipeline.rs  upscale.rs
crates/chess-corners/benches/common/: mod.rs
crates/chess-corners/examples/: bench_sweep.rs  multiscale_image.rs  perf_overlay.rs  profile_target.rs  single_scale_image.rs
crates/chess-corners/src/: config.rs  detector.rs  diagnostics.rs  error.rs  image.rs  lib.rs  low_level.rs  ml_refiner.rs  multiscale.rs  pyramid.rs  radon.rs  upscale.rs
crates/chess-corners/src/config/: chess.rs  detection.rs  mod.rs  multiscale.rs  radon.rs  tests.rs
crates/chess-corners/tests/: api.rs  determinism.rs  ml_snapshot.rs  orientation_slot_parity.rs  perf_accuracy_guard.rs  radon_pipeline.rs  refiner_benchmark.rs  snapshot_regression.rs  upscale_pipeline.rs
crates/chess-corners/tests/common/: refiner_harness.rs
crates/chess-corners/tests/snapshots/: manifest.txt  ml_manifest.txt
demo/: .gitignore  index.html  package.json  vite.config.ts
docs/: API_REVISION.md  BACKLOG.md  README.md  ROADMAP.md  backlog.md  design.md  detector-comparison.md  proposal-ml-refiner-v3.md  proposal-radon-detector.md  refiner-comparison.md  subagent-workflow.md
ports/: README.md
scripts/: build-site.sh  build-wasm.sh  gen-perf-data.sh  gen_perf_data.py
tools/: accuracy_bench.py  check_doc_versions.py  crop.py  perf_bench.py  plot_corners.py  plot_output.py  profile.sh  render_book_overlays.py  render_orientation_overlays.py  render_readme_perf.py  render_readme_warp_overlays.py  synthimages.py
(+134 files in other folders)
