[workspace]
resolver = "2"
members = [
  "crates/box-image-pyramid",
  "crates/chess-corners-core",
  "crates/chess-corners",
  "crates/chess-corners-ml",
  "crates/chess-corners-py",
  "crates/chess-corners-wasm",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/VitalyVorobyev/chess-corners-rs"
