[workspace]
resolver = "2"
members = [
  "crates/box-image-pyramid",
  "crates/chess-corners-core",
  "crates/chess-corners",
  "crates/chess-corners-testutil",
  "crates/chess-corners-capi",
  "crates/chess-corners-ml",
  "crates/chess-corners-py",
  "crates/chess-corners-wasm",
]

[workspace.package]
version = "0.11.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/VitalyVorobyev/chess-corners-rs"
rust-version = "1.88"
categories = ["computer-vision", "algorithms"]

[workspace.dependencies]
anyhow = "1"
box-image-pyramid = { path = "crates/box-image-pyramid", version = "0.11.2" }
chess-corners = { path = "crates/chess-corners", version = "0.11.2", default-features = false }
chess-corners-core = { path = "crates/chess-corners-core", version = "0.11.2" }
chess-corners-ml = { path = "crates/chess-corners-ml", version = "0.11.2" }
clap = { version = "4.6", features = ["derive"] }
criterion = "0.8"
fast_image_resize = { version = "6", features = ["image"] }
image = "0.25"
js-sys = "0.3"
log = "0.4"
ndarray = "0.17"
ndarray-npy = "0.10"
numpy = "0.29"
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
pyo3-build-config = "0.29"
rayon = "1"
resize = "0.8"
rgb = "0.8"
serde = { version = "1", default-features = false }
serde_json = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tract-onnx = "0.22"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }
