[package]
name = "box-image-pyramid"
version = "0.4.2"
description = "Minimal u8 grayscale image pyramid using 2x box-filter downsampling with reusable buffers"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["image-pyramid", "downsample", "box-filter", "computer-vision"]

[lib]
name = "box_image_pyramid"
path = "src/lib.rs"

[features]
default = []
rayon = ["dep:rayon"]
simd = []
par_pyramid = []  # opt-in gate for SIMD/parallel pyramid downsampling
tracing = ["dep:tracing"]

[dependencies]
rayon = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.8"
fast_image_resize = { version = "6", features = ["image"] }
image = "0.25"
resize = "0.8"
rgb = "0.8"

[[bench]]
name = "pyramid_perf"
harness = false
