[package]
name = "box-image-pyramid"
version.workspace = true
description = "Minimal u8 grayscale image pyramid using 2x box-filter downsampling with reusable buffers"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["image-pyramid", "downsample", "box-filter", "computer-vision"]

[lib]
name = "box_image_pyramid"
path = "src/lib.rs"

[features]
default = []
rayon = ["dep:rayon"]
simd = []
par_pyramid = []  # opt-in gate for SIMD/parallel pyramid downsampling
tracing = ["dep:tracing"]

[dependencies]
rayon = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
fast_image_resize.workspace = true
image.workspace = true
resize.workspace = true
rgb.workspace = true

[[bench]]
name = "pyramid_perf"
harness = false
