[package]
name = "chess-corners-core"
version.workspace = true
description = "Core ChESS (Chess-board Extraction by Subtraction and Summation) response + corner candidates"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://vitalyvorobyev.github.io/chess-corners-rs/api/chess_corners_core"
homepage = "https://vitalyvorobyev.github.io/chess-corners-rs"
keywords = ["chessboard", "chess-corners", "corner-detection", "computer-vision", "image-processing"]
readme = "README.md"

[lib]
name = "chess_corners_core"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
rayon = ["dep:rayon"]
simd = []
tracing = ["dep:tracing"]
# Opt-in: use `u32` for the whole-image Radon summed-area-table
# elements instead of the default `i64`. `u32` halves SAT memory and
# widens SIMD lanes but caps total summed intensity at `u32::MAX`,
# which in practice limits the detector to images of roughly 16 MP
# (255 · W · H ≤ u32::MAX). Without this feature, i64 is used.
radon-sat-u32 = []

[dependencies]
rayon = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
log.workspace = true
serde = { workspace = true, default-features = false, features = ["derive"] }

[dev-dependencies]
criterion.workspace = true
image.workspace = true
serde_json.workspace = true

[[bench]]
name = "descriptor_fit"
harness = false

[[bench]]
name = "radon_response"
harness = false

[[bench]]
name = "refiners"
harness = false
