[package]
name = "chess-corners-ml"
version.workspace = true
description = "ONNX-based ML refiner inference for chess-corners"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://vitalyvorobyev.github.io/chess-corners-rs/api/chess_corners_ml"
homepage = "https://vitalyvorobyev.github.io/chess-corners-rs"
keywords = ["chessboard", "chess-corners", "corner-detection", "computer-vision", "image-processing"]
readme = "README.md"

[lib]
name = "chess_corners_ml"
path = "src/lib.rs"

[features]
default = ["embed-model"]
embed-model = []

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tract-onnx.workspace = true

[dev-dependencies]
ndarray.workspace = true
ndarray-npy.workspace = true
tempfile.workspace = true
