[package]
name = "chess-corners-py"
version = "0.4.2"
description = "Python bindings for chess-corners"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
autobins = false

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "src/lib.rs"
doc = false

[features]
default = ["ml-refiner"]
ml-refiner = ["chess-corners/ml-refiner"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
numpy = "0.28"
chess-corners = { path = "../chess-corners", version = "0.4.2" }
serde_json = "1"

[build-dependencies]
pyo3-build-config = "0.28"
