[package]
name = "chess-corners-py"
version.workspace = true
description = "Python bindings for chess-corners"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
autobins = false

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "src/lib.rs"
doc = false

[features]
default = ["ml-refiner"]
ml-refiner = ["chess-corners/ml-refiner"]

[dependencies]
pyo3.workspace = true
numpy.workspace = true
chess-corners.workspace = true
serde_json.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true
