[package]
name = "chess-corners-wasm"
version.workspace = true
description = "WebAssembly bindings for the ChESS corner detector"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chess-corners.workspace = true
chess-corners-core = { path = "../chess-corners-core", version = "0.5.0", default-features = false, features = ["std"] }
wasm-bindgen.workspace = true
js-sys.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
