[package]
name = "chess-corners-wasm"
version.workspace = true
description = "WebAssembly bindings for the ChESS corner detector"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ml-refiner = ["chess-corners/ml-refiner"]

[dependencies]
chess-corners.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
