[package]
name = "chess-corners"
version = "0.3.2"
description = "High-level chessboard / ChESS corner detection API"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://vitalyvorobyev.github.io/chess-corners-rs/api/chess_corners"
homepage = "https://vitalyvorobyev.github.io/chess-corners-rs"
keywords = ["chessboard", "chess-corners", "corner-detection", "computer-vision", "image-processing"]
readme = "README.md"
autobins = false

[lib]
name = "chess_corners"
path = "src/lib.rs"

[features]
default = ["image"]
image = ["dep:image"]
rayon = ["chess-corners-core/rayon", "dep:rayon", "box-image-pyramid/rayon"]
simd = ["chess-corners-core/simd", "box-image-pyramid/simd"]
tracing = ["chess-corners-core/tracing", "dep:tracing", "box-image-pyramid/tracing"]
ml-refiner = ["dep:chess-corners-ml"]
par_pyramid = ["box-image-pyramid/par_pyramid"]
cli = []

[[bin]]
name = "chess-corners"
path = "bin/main.rs"
required-features = ["image"]

[dependencies]
box-image-pyramid = { path = "../box-image-pyramid", version = "0.1" }
chess-corners-core = { path = "../chess-corners-core", version = "0.3" }
chess-corners-ml = { path = "../chess-corners-ml", version = "0.3", optional = true }
image = { version = "0.25", optional = true }
log = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rayon = { version = "1.10", optional = true }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]

[[example]]
name = "single_scale_image"
path = "examples/single_scale_image.rs"
required-features = ["image"]

[[example]]
name = "multiscale_image"
path = "examples/multiscale_image.rs"
required-features = ["image"]
