[package]
name = "chess-corners"
version.workspace = true
description = "High-level chessboard / ChESS corner detection API"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://vitalyvorobyev.github.io/chess-corners-rs/api/chess_corners"
homepage = "https://vitalyvorobyev.github.io/chess-corners-rs"
keywords = ["chessboard", "chess-corners", "corner-detection", "computer-vision", "image-processing"]
readme = "README.md"
autobins = false

[lib]
name = "chess_corners"
path = "src/lib.rs"

[features]
default = ["image"]
image = ["dep:image"]
rayon = ["chess-corners-core/rayon", "dep:rayon", "box-image-pyramid/rayon"]
simd = ["chess-corners-core/simd", "box-image-pyramid/simd"]
tracing = ["chess-corners-core/tracing", "dep:tracing", "box-image-pyramid/tracing"]
ml-refiner = ["dep:chess-corners-ml"]
par_pyramid = ["box-image-pyramid/par_pyramid"]
cli = ["dep:clap", "dep:anyhow", "dep:serde_json", "dep:tracing-subscriber"]

[[bin]]
name = "chess-corners"
path = "bin/main.rs"
required-features = ["image", "cli"]

[dependencies]
box-image-pyramid.workspace = true
chess-corners-core.workspace = true
chess-corners-ml = { workspace = true, optional = true }
image = { workspace = true, optional = true }
log.workspace = true
anyhow = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[dev-dependencies]

[[example]]
name = "single_scale_image"
path = "examples/single_scale_image.rs"
required-features = ["image"]

[[example]]
name = "multiscale_image"
path = "examples/multiscale_image.rs"
required-features = ["image"]
